// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a show 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    px={2}
    py={1}
    style={
      Array [
        Object {
          "display": "flex",
          "paddingBottom": 10,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 10,
        },
        null,
      ]
    }
  >
    <View
      flexDirection="row"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <AROpaqueImageView
        imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
        style={
          Array [
            Object {
              "borderRadius": 2,
              "height": 80,
              "width": 80,
            },
          ]
        }
      />
      <View
        justifyContent="flex-start"
        ml={1}
        style={
          Array [
            Object {
              "display": "flex",
              "justifyContent": "flex-start",
              "marginLeft": 10,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "alignItems": "center",
                "flex": 0,
              },
            ]
          }
        >
          <Text
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Medium"
            fontSize="14px"
            lineHeight="20px"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {},
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            ACA Galleries
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#6e1fff",
                  "borderRadius": 4,
                  "height": 8,
                  "marginLeft": 10,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <Text
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Medium"
          fontSize="14px"
          lineHeight="20px"
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {},
            ]
          }
        >
          Catty Fair
        </Text>
        <Text
          color="black60"
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="24px"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {},
            ]
          }
        >
          Karl and Anna... Fab!
        </Text>
        <Text
          color="black60"
          fontFamily="Unica77LL-Regular"
          fontSize="12px"
          lineHeight="16px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 12,
                "lineHeight": 16,
                "textAlign": "right",
              },
              Object {},
              Object {
                "flex": 0,
              },
            ]
          }
          textAlign="right"
        >
          a year ago
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly with an artwork 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
>
  <View
    px={2}
    py={1}
    style={
      Array [
        Object {
          "display": "flex",
          "paddingBottom": 10,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 10,
        },
        null,
      ]
    }
  >
    <View
      flexDirection="row"
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <AROpaqueImageView
        imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
        style={
          Array [
            Object {
              "borderRadius": 2,
              "height": 80,
              "width": 80,
            },
          ]
        }
      />
      <View
        justifyContent="flex-start"
        ml={1}
        style={
          Array [
            Object {
              "display": "flex",
              "justifyContent": "flex-start",
              "marginLeft": 10,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <View
          flexDirection="row"
          style={
            Array [
              Object {
                "display": "flex",
                "flexDirection": "row",
              },
              Object {
                "alignItems": "center",
                "flex": 0,
              },
            ]
          }
        >
          <Text
            ellipsizeMode="tail"
            fontFamily="Unica77LL-Medium"
            fontSize="14px"
            lineHeight="20px"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "Unica77LL-Medium",
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                Object {},
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            ACA Galleries
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#6e1fff",
                  "borderRadius": 4,
                  "height": 8,
                  "marginLeft": 10,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <Text
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Medium"
          fontSize="14px"
          lineHeight="20px"
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Medium",
                "fontSize": 14,
                "lineHeight": 20,
              },
              Object {},
            ]
          }
        >
          Inquiry on 
          Bradley Theodore
        </Text>
        <Text
          color="black60"
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="24px"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {},
            ]
          }
        >
          Karl and Anna... Fab!
        </Text>
        <Text
          color="black60"
          fontFamily="Unica77LL-Regular"
          fontSize="12px"
          lineHeight="16px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 12,
                "lineHeight": 16,
                "textAlign": "right",
              },
              Object {},
              Object {
                "flex": 0,
              },
            ]
          }
          textAlign="right"
        >
          a year ago
        </Text>
      </View>
    </View>
  </View>
</View>
`;
